--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPm3laoreXH66KOJZkWaP+F",
+      "authorship_tag": "ABX9TyMlyUqvKpa7kZYQZoCRtWWh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,7 +103,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "54a8hhq8l2AK"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,7 +144,7 @@
       "metadata": {
         "id": "HrCBq56i3sVW"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -226,7 +226,7 @@
       "metadata": {
         "id": "e1yPmU17vYrs"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -258,11 +258,10 @@
         "id": "tfnZyAI5nVL0",
         "outputId": "95c3f41f-25be-4ffa-b54c-15295381cf59",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -296,11 +295,10 @@
         "id": "ND78M8VHnj7w",
         "outputId": "0a49ec75-0a23-4825-8ee2-3ba87c5dc195",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -345,7 +343,7 @@
       "metadata": {
         "id": "-04BquM1nbe4"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -366,11 +364,10 @@
         "id": "uLYCNOICACwv",
         "outputId": "733291a7-9adf-43fe-feef-68e6ac25ca35",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -491,7 +488,7 @@
         "    self.ff_units = ff_units\n",
         "    self.n_features = n_features\n",
         "\n",
-        "    self.attention_heads = MultiHeadAttention(n_heads, d_model, input_dim=n_features)\n",
+        "    self.self_attention_heads = MultiHeadAttention(n_heads, d_model, input_dim=n_features)\n",
         "    self.feed_forward_network = nn.Sequential(\n",
         "        nn.Linear(d_model, ff_units),\n",
         "        nn.ReLU(),\n",
@@ -499,15 +496,15 @@
         "    )\n",
         "\n",
         "  def forward(self, query, mask=None):\n",
-        "    self.attention_heads.init_keys(query)\n",
-        "    attention = self.attention_heads(query, mask)  # context vector\n",
-        "    output = self.feed_forward_network(attention)  # hidden state\n",
+        "    self.self_attention_heads.init_keys(query)\n",
+        "    self_attention = self.self_attention_heads(query, mask)  # context vector\n",
+        "    output = self.feed_forward_network(self_attention)       # hidden state\n",
         "    return output"
       ],
       "metadata": {
         "id": "QW0r77mzsKad"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -540,7 +537,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -566,7 +563,7 @@
       "metadata": {
         "id": "uazDFnOxHTvq"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -596,7 +593,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -632,61 +629,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The decoder’s goal is to generate the target sequence from an\n",
-        "initial representation; that is, to decode it.\n",
+        "In cross-attention, the decoder provided a \"query\" ($Q$), which served not only as input but also got concatenated to the resulting context vector. That won’t be the case anymore!\n",
         "\n",
-        "Sounds like a perfect match, doesn’t it?\n",
+        "Instead of concatenation, the context vector will go through a feed-forward network in the decoder to generate the predicted coordinates.\n",
         "\n",
-        "Encode the source sequence, get its\n",
-        "representation (final hidden state), and feed it to the decoder so it generates the\n",
-        "target sequence.\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/cross_attn.png?raw=1)\n",
         "\n",
-        "How does the decoder transform a hidden state into a sequence?\n",
+        "If you’re wondering why the concatenation part is removed, here comes the\n",
+        "answer: We’re using self-attention as a decoder too.\n",
         "\n",
-        "We can use recurrent layers for that as well.\n",
-        "\n",
-        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/decoder.png?raw=1)"
+        "There is one main difference between the encoder and the\n",
+        "decoder—the latter includes a cross-attention mechanism."
       ],
       "metadata": {
         "id": "ke2La37HIOH3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "* In the first step, the initial hidden state is the encoder’s final hidden state ($h_f$, in blue).\n",
-        "* The first cell will output a new hidden state ($h_2$): That’s both the output of that cell and one of the inputs of the next cell.\n",
-        "* Before, we’d only run the final hidden state through a linear layer to produce the logits, but now we’ll run the output of every cell through a linear layer ($w^Th$) to convert each hidden state into predicted coordinates ($x_2$).\n",
-        "* The predicted coordinates are then used as one of the inputs of the second\n",
-        "step ($x_2$).\n",
-        "\n",
-        "The first cell takes both an initial hidden state ($h_f$, in blue, the\n",
-        "encoder’s output) and a first data point ($x_1$, in red).\n",
-        "\n",
-        "In our case, the decoder’s first data point is actually the last data point in the\n",
-        "source sequence because the target sequence is not a new sequence, but the\n",
-        "continuation of the source sequence.\n",
-        "\n",
-        "This is not always the case. In translation, where the target sequence is a new sequence, the first data point is\n",
-        "some \"special\" token that indicates the start of that new sequence.\n",
-        "\n",
-        "There is another small, yet fundamental difference between the\n",
-        "encoder and the decoder: Since the decoder uses the prediction\n",
-        "of last step as input to the next, we’ll have to manually loop over\n",
-        "the generation of the target sequence.\n",
-        "\n",
-        "This also means we need to keep track of the hidden state from\n",
-        "last step to the next, using the hidden state of last step as input\n",
-        "to the next.\n",
-        "\n",
-        "But, instead of making the hidden state both an input and an\n",
-        "output of the `forward()` method, we can easily handle this by making the hidden state an\n",
-        "attribute of our decoder model.\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "t7vKalfLIgSG"
       }
     },
     {
@@ -694,34 +650,34 @@
       "source": [
         "class Decoder(nn.Module):\n",
         "\n",
-        "  def __init__(self, n_features, hidden_dim):\n",
+        "  def __init__(self, n_heads, d_model, ff_units, n_features=None):\n",
         "    super().__init__()\n",
         "\n",
-        "    self.hidden_dim = hidden_dim\n",
-        "    self.n_features = n_features\n",
-        "    self.hidden_state = None\n",
+        "    self.n_heads = n_heads\n",
+        "    self.d_model = d_model\n",
+        "    self.ff_units = ff_units\n",
+        "    self.n_features = d_model if n_features is None else n_features\n",
         "\n",
-        "    # Simple RNN\n",
-        "    self.basic_rnn = nn.RNN(self.n_features, self.hidden_dim, batch_first=True)\n",
-        "    # regression to produce a logits as outputs\n",
-        "    self.regression = nn.Linear(self.hidden_dim, self.n_features)\n",
+        "    self.self_attention_heads = MultiHeadAttention(n_heads, d_model, input_dim=self.n_features)\n",
+        "    self.cross_attention_heads = MultiHeadAttention(n_heads, d_model)\n",
         "\n",
-        "  def init_hidden(self, hidden_seq):\n",
-        "    # We only need the final hidden state\n",
-        "    hidden_final = hidden_seq[:, -1:]  # N, 1, H\n",
-        "    # Initializing decoder’s hidden state using encoder’s final hidden state.\n",
-        "    self.hidden_state = hidden_final.permute(1, 0, 2) # But we need to make it sequence-first\n",
+        "    self.feed_forward_network = nn.Sequential(\n",
+        "        nn.Linear(d_model, ff_units),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Linear(ff_units, self.n_features)\n",
+        "    )\n",
         "\n",
-        "  def forward(self, X):\n",
-        "    # X is batch first (N, L, F)\n",
-        "    # The recurrent layer both uses and updates the hidden state\n",
-        "    batch_first_output, self.hidden_state = self.basic_rnn(X, self.hidden_state)\n",
+        "  def init_keys(self, states):\n",
+        "    self.cross_attention_heads.init_keys(states)\n",
         "\n",
-        "    last_output = batch_first_output[:, -1:]\n",
-        "    out = self.regression(last_output)\n",
+        "  def forward(self, query, source_mask=None, target_mask=None):\n",
+        "    self.self_attention_heads.init_keys(query)\n",
         "\n",
-        "    # The output has the same shape as the input (N, 1, F)\n",
-        "    return out.view(-1, 1, self.n_features)"
+        "    self_attention = self.self_attention_heads(query, target_mask)\n",
+        "    cross_attention = self.cross_attention_heads(self_attention, source_mask)\n",
+        "    output = self.feed_forward_network(cross_attention)\n",
+        "\n",
+        "    return output"
       ],
       "metadata": {
         "id": "iBDqtgUpOBQG"
@@ -732,74 +688,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "So it’s time\n",
-        "to try some decoding to generate a target sequence:"
+        "Once again, we can dive deeper into the inner workings of the self-attention\n",
+        "mechanism.\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/decoder_self.png?raw=1)\n",
+        "\n",
+        "\n",
+        "There is one small difference in the self-attention architecture between encoder and decoder: The feed-forward network in the decoder sits atop the cross-attention mechanism instead of the self-attention\n",
+        "mechanism.\n",
+        "\n",
+        "The feed-forward network also maps the decoder’s output from the\n",
+        "dimensionality of the model (`d_model`) back to the number of features, thus\n",
+        "yielding predictions.\n",
+        "\n",
+        "We can also use a simplified diagram for the decoder.\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/transf_decself.png?raw=1)\n",
+        "\n",
+        "The decoder’s first input $(x_{10}, x_{11})$ is the last known element of the source sequence, as usual. The source mask is the same mask used to ignore padded data points in the encoder."
       ],
       "metadata": {
         "id": "XaIFUnF6JGYe"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "torch.manual_seed(21)\n",
-        "\n",
-        "decoder = Decoder(n_features=2, hidden_dim=2)\n",
-        "\n",
-        "# Initial hidden state will be encoder's final hidden state\n",
-        "decoder.init_hidden(hidden_seq)\n",
-        "# Initial data point is the last element of source sequence\n",
-        "inputs = source_seq[:, -1:]\n",
-        "\n",
-        "target_len = 2\n",
-        "for i in range(target_len):\n",
-        "  print(f\"Hidden: {decoder.hidden_state}\")\n",
-        "  # Predicts coordinates\n",
-        "  outputs = decoder(inputs)\n",
-        "  print(f\"Output: {outputs}\\n\")\n",
-        "  # Predicted coordinates are next step's inputs\n",
-        "  inputs = outputs"
-      ],
-      "metadata": {
-        "id": "fgMpzO1_Cdx1",
-        "outputId": "e921f3c6-af14-44f0-fa7b-f900992401b6",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hidden: tensor([[[ 0.3105, -0.5263]]], grad_fn=<PermuteBackward0>)\n",
-            "Output: tensor([[[0.3205, 0.1144]]], grad_fn=<ViewBackward0>)\n",
-            "\n",
-            "Hidden: tensor([[[ 0.8898, -0.3653]]], grad_fn=<StackBackward0>)\n",
-            "Output: tensor([[[0.2905, 0.1976]]], grad_fn=<ViewBackward0>)\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "There is one problem with the approach above, though—an untrained model will\n",
-        "make really bad predictions, and these predictions will still be used as inputs for\n",
-        "subsequent steps.\n",
-        "\n",
-        "This makes model training unnecessarily hard because the\n",
-        "prediction error in one step is caused by both the (untrained) model and the\n",
-        "prediction error in the previous step.\n",
-        "\n",
-        "Can’t we use the actual target sequence instead?\n",
-        "\n",
-        "Sure we can! This technique is called teacher forcing."
-      ],
-      "metadata": {
-        "id": "Trg9QDGzMndS"
       }
     },
     {
