--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMlyUqvKpa7kZYQZoCRtWWh",
+      "authorship_tag": "ABX9TyP3h1mlvDGZranduBud5EJW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -723,8 +723,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The reasoning is simple: Ignore the predictions and use the real data from the\n",
-        "target sequence instead."
+        "Now, let’s define the shifted target sequence, which\n",
+        "includes the last known element of the source sequence and all elements in the\n",
+        "target sequence but the last one.\n",
+        "\n",
+        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/shifted_target.png?raw=1)"
       ],
       "metadata": {
         "id": "rzT-jadyPizZ"
@@ -733,19 +736,191 @@
     {
       "cell_type": "code",
       "source": [
-        "# Initial hidden state will be encoder's final hidden state\n",
-        "decoder.init_hidden(hidden_seq)\n",
-        "# Initial data point is the last element of source sequence\n",
-        "inputs = source_seq[:, -1:]\n",
+        "shifted_seq = torch.cat([source_seq[:, -1:], target_seq[:, :-1]], dim=1)"
+      ],
+      "metadata": {
+        "id": "WcuFhCxbL1aK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The shifted target sequence was already used, when we used teacher forcing. There, at every step (after the first one), it\n",
+        "randomly chose as the input to the subsequent step either an actual element from that sequence or a prediction. It worked very well with recurrent layers that were sequential in nature. But this isn’t the case anymore.\n",
         "\n",
-        "target_len = 2\n",
-        "for i in range(target_len):\n",
-        "  print(f\"Hidden: {decoder.hidden_state}\")\n",
-        "  # Predicts coordinates\n",
-        "  outputs = decoder(inputs)\n",
-        "  print(f\"Output: {outputs}\\n\")\n",
-        "  # But completely ignores the predictions and uses real data instead\n",
-        "  inputs = target_seq[:, i: i + 1]  # Inputs to the next step are not predictions anymore"
+        ">One of the advantages of self-attention over recurrent layers is\n",
+        "that operations can be parallelized. No need to do anything\n",
+        "sequentially anymore, teacher forcing included. This means we’re\n",
+        "using the whole shifted target sequence at once as the \"query\"\n",
+        "argument of the decoder.\n",
+        "\n",
+        "That’s very nice and cool, sure, but it raises one big problem involving the…"
+      ],
+      "metadata": {
+        "id": "rfUevq42MLy2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Attention Scores"
+      ],
+      "metadata": {
+        "id": "JwHzNXdnMlRe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To understand what the problem is, let’s look at the context vector that will result in the first \"hidden state\" produced by the decoder, which, in turn, will lead to the first prediction:\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "\\alpha_{\\color{green}{2}\\color{red}1}, \\alpha_{{\\color{green}{2}\\color{red}2}} = \\text{softmax}(\\frac{\\color{red}{Q_1}\\color{black}\\cdot K_1}{\\sqrt{2}}, \\frac{\\color{red}{Q_1}\\color{black}\\cdot K_2}{\\sqrt{2}})\n",
+        "\\\\\n",
+        "\\Large\n",
+        "\\color{green}{\\text{context vector}_2}\\color{black}= \\alpha_{\\color{green}{2}\\color{red}1}V_1 + \\alpha_{{\\color{green}{2}\\color{red}2}}V_2\n",
+        "$$\n",
+        "\n",
+        "What’s the problem with it?\n",
+        "\n",
+        "The problem is that it is using a \"key\" ($K_2$) and a \"value\" ($V_2$) that are\n",
+        "transformations of the data point it is trying to predict.\n",
+        "\n",
+        ">In other words, the model is being allowed to cheat by peeking\n",
+        "into the future because we’re giving it all data points in the\n",
+        "target sequence except the very last one.\n",
+        "\n",
+        "If we look at the context vector corresponding to the last prediction, it should be clear that the model simply cannot cheat (there’s no $K_3$ or $V_3$):\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "\\alpha_{\\color{green}{3}\\color{red}1}, \\alpha_{{\\color{green}{3}\\color{red}2}} = \\text{softmax}(\\frac{\\color{red}{Q_2}\\color{black}\\cdot K_1}{\\sqrt{2}}, \\frac{\\color{red}{Q_2}\\color{black}\\cdot K_2}{\\sqrt{2}})\n",
+        "\\\\\n",
+        "\\Large\n",
+        "\\color{green}{\\text{context vector}_3}\\color{black}= \\alpha_{\\color{green}{3}\\color{red}1}V_1 + \\alpha_{{\\color{green}{3}\\color{red}2}}V_2\n",
+        "$$\n",
+        "\n",
+        "We can also check it quickly by looking at the subscript indices: As long as the indices of the \"values\" are lower than the index of the context vector, there is no cheating.\n",
+        "\n",
+        "By the way, it is even easier to check what’s happening if we use the\n",
+        "alphas matrix:\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "\\begin{array}{c|cc}\n",
+        "& \\text{source}\\\\\n",
+        "\\text{target}& \\color{red}{x_1} & \\color{red}{x_2} \\\\\n",
+        "\\hline\n",
+        " \\color{green}{h_2} & \\alpha_{\\color{green}{2}\\color{red}1} & \\alpha_{{\\color{green}{2}\\color{red}2}} \\\\\n",
+        " \\color{green}{h_3} & \\alpha_{\\color{green}{3}\\color{red}1} & \\alpha_{{\\color{green}{3}\\color{red}2}}\n",
+        "\\end{array}\n",
+        "$$\n",
+        "\n",
+        "For the decoder, the shape of the alphas attribute is given by $(N, L_{target}, L_{target})$ since\n",
+        "it is looking at itself. Any alphas above the diagonal are, literally, cheating codes.\n",
+        "\n",
+        "We need to force the self-attention mechanism to ignore them.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "1w08fXHxMnsN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Target Mask (Training)"
+      ],
+      "metadata": {
+        "id": "SYUBZDCpPP4k"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The purpose of the target mask is to zero attention scores for \"future\" data\n",
+        "points.\n",
+        "\n",
+        "In our example, that’s the alphas matrix we’re aiming for:\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "\\begin{array}{c|cc}\n",
+        "& \\text{source}\\\\\n",
+        "\\text{target}& \\color{red}{x_1} & \\color{red}{x_2} \\\\\n",
+        "\\hline\n",
+        " \\color{green}{h_2} & \\alpha_{\\color{green}{2}\\color{red}1} & 0 \\\\\n",
+        " \\color{green}{h_3} & \\alpha_{\\color{green}{3}\\color{red}1} & \\alpha_{{\\color{green}{3}\\color{red}2}}\n",
+        "\\end{array}\n",
+        "$$\n",
+        "\n",
+        "Therefore we need a mask that flags every element above the\n",
+        "diagonal as invalid, as we did with the padded data points in the\n",
+        "source mask. The shape of the target mask, though, must match\n",
+        "the shape of the alphas attribute: $(N, L_{target}, L_{target})$.\n",
+        "\n",
+        "We can create a function to generate the mask for us:"
+      ],
+      "metadata": {
+        "id": "jdd-KXSCPQ4Y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def subsequent_mask(size):\n",
+        "  attention_shape = (1, size, size)\n",
+        "  subsequent_mask = (1 - torch.triu(torch.ones(attention_shape), diagonal=1)).bool()\n",
+        "  return subsequent_mask"
+      ],
+      "metadata": {
+        "id": "nh0vG1bqPtWf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "subsequent_mask(2) # 1, L, L"
+      ],
+      "metadata": {
+        "id": "Iuq-8GSWQXlP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We must use this mask while querying the decoder to prevent it\n",
+        "from cheating.\n",
+        "\n",
+        "You can choose to use an additional mask to\n",
+        "\"hide\" more data from the decoder if you wish, but the\n",
+        "subsequent mask is a necessity with the self-attention decoder.\n",
+        "\n",
+        "Let’s see it in practice:"
+      ],
+      "metadata": {
+        "id": "22-co1gTQYFw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(13)\n",
+        "\n",
+        "decoder = Decoder(n_heads=3, d_model=2, ff_units=10, n_features=2)\n",
+        "decoder.init_keys(decoder)\n",
+        "\n",
+        "query = shifted_seq\n",
+        "decoder_output = decoder(query, target_mask=subsequent_mask(2))\n",
+        "\n",
+        "decoder_output.self_attention_heads.alphas"
       ],
       "metadata": {
         "id": "v8JKnoukC_Eo",
@@ -773,26 +948,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This is great for training time, sure—but what about testing time,\n",
-        "when the target sequence is unknown?\n",
-        "\n",
-        "At testing time, there is no escape from using only the model’s own predictions\n",
-        "from previous steps.\n",
-        "\n",
-        "The problem is, a model trained using teacher forcing will minimize the loss given\n",
-        "the correct inputs at every step of the target sequence. But, since this will never\n",
-        "be the case at testing time, the model is likely to perform poorly when using its\n",
-        "own predictions as inputs.\n",
-        "\n",
-        "What can we do about it?\n",
-        "\n",
-        "During training, sometimes the model will use\n",
-        "teacher forcing, and sometimes it will use its own predictions.\n",
-        "\n",
-        "So we occasionally\n",
-        "help the model by providing an actual input, but we still force it to be robust\n",
-        "enough to generate and use its own inputs."
+        "###Target Mask (Evaluation/Prediction)"
       ],
+      "metadata": {
+        "id": "3eXtRy5QSBch"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
       "metadata": {
         "id": "siOJmxzOR4Kq"
       }
